RESOLVED FIXED279384
[JSC] Ensure StructureStubInfoClearingWatchpoint does not outlive its CodeBlock
https://bugs.webkit.org/show_bug.cgi?id=279384
Summary [JSC] Ensure StructureStubInfoClearingWatchpoint does not outlive its CodeBlock
Dan Hecht
Reported 2024-09-09 14:43:54 PDT
Attachments
Dan Hecht
Comment 1 2024-09-09 14:50:38 PDT
EWS
Comment 2 2024-09-10 19:20:12 PDT
Committed 283454@main (9ce98e026db3): <https://commits.webkit.org/283454@main> Reviewed commits have been landed. Closing PR #33338 and removing active labels.
EWS
Comment 3 2024-09-11 14:47:58 PDT
Committed 283286.15@safari-7620-branch (a9fdb9ef50bc): <https://commits.webkit.org/283286.15@safari-7620-branch> Reviewed commits have been landed. Closing PR #1730 and removing active labels.
EWS
Comment 4 2024-09-11 17:23:24 PDT
Committed 280938.326@safari-7619-branch (08080b41c1a7): <https://commits.webkit.org/280938.326@safari-7619-branch> Reviewed commits have been landed. Closing PR #1742 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.